Sculpt Mask brush toggle hotkey is broken #75457

Closed
opened 2020-04-06 21:41:37 +02:00 by TheRedWaxPolice · 13 comments

System Information
Operating system: Win 10

Blender Version
Broken: blender-2.83-7c0e28594840-windows64
Worked: blender-2.80-windows64

Short description of error
The sculpting mask brush hotkey (M) used to work as a toggle on previous versions of blender, which means, if you press "M" it would switch to the mask brush, and once you press "M" again it would switch back to the previous sculpting brush you were using. But that's no longer the case, even though the Toggle property checkbox is enabled in the keymap...

Exact steps for others to reproduce the error
Launch Blender
Go to File/New/Sculpting
Press "M" and it will switch to the mask brush
Press "M" again and nothing will happen. (it should toggle back to the draw brush)

**System Information** Operating system: Win 10 **Blender Version** Broken: blender-2.83-7c0e28594840-windows64 Worked: blender-2.80-windows64 **Short description of error** The sculpting mask brush hotkey (M) used to work as a toggle on previous versions of blender, which means, if you press "M" it would switch to the mask brush, and once you press "M" again it would switch back to the previous sculpting brush you were using. But that's no longer the case, even though the Toggle property checkbox is enabled in the keymap... **Exact steps for others to reproduce the error** Launch Blender Go to File/New/Sculpting Press "M" and it will switch to the mask brush Press "M" again and nothing will happen. *(it should toggle back to the draw brush)*

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

The shortcut of draw brush is X though

The shortcut of draw brush is X though

In #75457#905058, @ankitm wrote:
The shortcut of draw brush is X though

Of course. But what it has to do with this bug report?
Have you tried to replicate the bug?

> In #75457#905058, @ankitm wrote: > The shortcut of draw brush is X though Of course. But what it has to do with this bug report? Have you tried to replicate the bug?

Added subscriber: @NelsonNAS

Added subscriber: @NelsonNAS

I can confirm this regression.

I can confirm this regression.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Member

Caused by 47da01a4db, so I think this is indeed a bug...

CC @ideasman42

Caused by 47da01a4db, so I think this is indeed a bug... CC @ideasman42
Philipp Oeser self-assigned this 2020-05-18 18:31:05 +02:00
Member

Think I got it, Diff incoming shortly...

Think I got it, Diff incoming shortly...

This issue was referenced by d33c27d68b

This issue was referenced by d33c27d68bb3dfa6f2a5690657ee820e9d65822c
Member

This is because we correctly switch the brush back to Brush->toggle_brush, but immediately after set the tool to the Tool for which the hotkey is assigned.
https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/sculpt_paint/paint_ops.c$737

First I thought it would be easy to get the tool from the toggle_brush, but needs a bit more investigation...

This is because we correctly switch the brush back to `Brush->toggle_brush`, but immediately after set the tool to the Tool for which the hotkey is assigned. https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/sculpt_paint/paint_ops.c$737 First I thought it would be easy to get the tool from the `toggle_brush`, but needs a bit more investigation...
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75457
No description provided.